--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,12 +1,48 @@
-linters:
-  enable:
-    - gofmt
-    - golint
-    - govet
-    - gosimple
-    - ineffassign
-    - errcheck
-    - staticcheck
+# https://golangci-lint.run/usage/configuration
+version: "2"
 
 run:
-  deadline: 5m
+  timeout: 5m
+  tests: true
+  concurrency: 4
+
+linters:
+  enable:
+    - govet
+    - errcheck
+    - staticcheck
+    - revive
+    - ineffassign
+    - unused
+    - misspell
+    - nakedret
+    - bodyclose
+    - gocritic
+    - makezero
+    - gosec
+  settings:
+    # https://staticcheck.dev/docs/configuration/
+    staticcheck:
+      checks:
+        - all
+        - '-QF1008'
+        - '-ST1000' 
+    revive:
+      rules:
+        - name: exported
+          disabled: true
+        - name: exported
+          disabled: true
+        - name: package-comments
+          disabled: true
+
+formatters:
+  enable:
+    - gofmt
+    - goimports
+
+output:
+  formats:
+    text:
+      print-linter-name: true
+      print-issued-lines: true
