--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -46,3 +46,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
+
+      - name: Build
+        run: go build -v ./cmd/kai
