--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,7 @@ jobs:
       matrix: 
         os: [ubuntu-latest,windows-latest,macos-latest]
 
-    runs-on: ubuntu-latest
+    runs-on: {{ matrix.os }}
 
     steps:
       - name: Checkout code
