--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+# Go binary
+bin/
+
 # Go workspace file
 go.work
 go.work.sum
