--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,5 +11,4 @@ sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**
 
-sonar.go.coverage.reportPaths=coverage.out
-
+sonar.go.coverage.reportPaths=./coverage/coverage.out
