Revert "fix: pass coverage directory and run sonar scan on linux runners"
This reverts commit 31f3e7b3c985fa153c80a1886072752c40dd6ed0.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,4 +11,5 @@ sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**
 
-sonar.go.coverage.reportPaths=./coverage/coverage.out
+sonar.go.coverage.reportPaths=coverage.out
+
