--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,41 +1,49 @@
-name: Unit tests
+name: Go
 on: [push, pull_request]
 
 permissions:
   contents: read
 
 jobs:
-  build:
-    strategy:
-      fail-fast: false
-      matrix: 
-        os: [ubuntu-latest,windows-latest,macos-latest]
-
-    runs-on: ${{ matrix.os }}
-
+  test:
+    name: Unit Test
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          persist-credentials: false
       
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
-          cache: true
       
       - name: Download dependencies
         run: go mod download
 
-      - name: Run tests
+      - name: Run tests 
         run: go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
-
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
+   
+  build: 
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Build
         run: go build -v ./cmd/kai
+
+  sonarscan:
+    name: Sonarcloud Scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarqube-scan-action@v5.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
