fix: sonarscan code coverage report failure

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,12 +4,24 @@ sonar.organization=basebandit
 sonar.projectName=kai
 sonar.projectVersion=0.0.1
 
+# Source configuration
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/vendor/**,**/testmocks/*,**/testdata/*
+sonar.exclusions=**/*_test.go,**/vendor/**,**/testmocks/**,**/testdata/**,**/*.pb.go,**/cmd/**
 
+# Test configuration
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
-sonar.test.exclusions=**/vendor/**
+sonar.test.exclusions=**/vendor/**,**/testmocks/**
 
+# Coverage configuration
 sonar.go.coverage.reportPaths=coverage.out
 
+# Language-specific settings
+sonar.go.golint.reportPaths=golint-report.out
+sonar.go.govet.reportPaths=govet-report.out
+
+# New code definition
+sonar.newCode.referenceBranch=main
+
+# Quality gate settings
+sonar.qualitygate.wait=true
