--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,24 +4,17 @@ sonar.organization=basebandit
 sonar.projectName=kai
 sonar.projectVersion=0.0.1
 
-# Source configuration
-sonar.sources=.
-sonar.exclusions=**/*_test.go,**/vendor/**,**/testmocks/**,**/testdata/**,**/*.pb.go,**/cmd/**
+sonar.sources=cluster,tools,cmd
+sonar.exclusions=**/*_test.go,**/vendor/**,**/testmocks/**,**/testdata/**,**/*.pb.go
 
-# Test configuration
-sonar.tests=.
+sonar.tests=cluster,tools
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**,**/testmocks/**
 
-# Coverage configuration
-sonar.go.coverage.reportPaths=coverage.out
-
-# Language-specific settings
-sonar.go.golint.reportPaths=golint-report.out
-sonar.go.govet.reportPaths=govet-report.out
-
-# New code definition
+sonar.go.coverage.reportPaths=coverage.out,./coverage.out
 sonar.newCode.referenceBranch=main
 
-# Quality gate settings
 sonar.qualitygate.wait=true
+
+sonar.go.golint.reportPaths=golint-report.out
+sonar.go.govet.reportPaths=govet-report.out
