--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,17 +4,24 @@ sonar.organization=basebandit
 sonar.projectName=kai
 sonar.projectVersion=0.0.1
 
-sonar.sources=cluster,tools,cmd
-sonar.exclusions=**/*_test.go,**/vendor/**,**/testmocks/**,**/testdata/**,**/*.pb.go
+# Source configuration
+sonar.sources=.
+sonar.exclusions=**/*_test.go,**/vendor/**,**/testmocks/**,**/testdata/**,**/*.pb.go,**/cmd/**
 
-sonar.tests=cluster,tools
+# Test configuration
+sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**,**/testmocks/**
 
-sonar.go.coverage.reportPaths=coverage.out,./coverage.out
-sonar.newCode.referenceBranch=main
+# Coverage configuration
+sonar.go.coverage.reportPaths=coverage.out
 
-sonar.qualitygate.wait=true
-
+# Language-specific settings
 sonar.go.golint.reportPaths=golint-report.out
 sonar.go.govet.reportPaths=govet-report.out
+
+# New code definition
+sonar.newCode.referenceBranch=main
+
+# Quality gate settings
+sonar.qualitygate.wait=true
