chore: fix source and test inclusions and exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,12 +4,11 @@ sonar.organization=basebandit
 sonar.projectName=kai
 sonar.projectVersion=0.0.1
 
-sonar.sources=cluster,tools,cmd
-sonar.exclusions=**/*_test.go,**/vendor/**,**/testmocks/**,**/testdata/**,**/*.pb.go
+sonar.sources=.
+sonar.exclusions=**/*_test.go,**/testmocks/**
 
-sonar.tests=cluster,tools
-sonar.test.inclusions=**/*_test.go
-sonar.test.exclusions=**/vendor/**,**/testmocks/**
+sonar.tests=.
+sonar.test.inclusions=**/*_test.go,**/testmocks/**
 
 sonar.go.coverage.reportPaths=coverage.out
 
