chore: exclude cmd and server.go from coverage requirements

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,4 +11,6 @@ sonar.test.inclusions=**/*_test.go,**/testmocks/**
 
 sonar.go.coverage.reportPaths=coverage.out
 
+sonar.coverage.exclusions=**/cmd/**,server.go
+
 sonar.qualitygate.wait=true
