--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,13 @@
 name: goreleaser
 
-on: 
+on:
   push:
     tags:
       - "*"
 
 permissions:
   contents: write
+  packages: write
 
 jobs:
   goreleaser:
@@ -16,16 +17,29 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Run Goreleaser
         uses: goreleaser/goreleaser-action@v6
         with:
-          # either 'goreleaser' or 'goreleaser-pro'
           distribution: goreleaser
-          # 'latest', 'nightly' or a semver version like 'v2.0.0'
           version: "~> v2"
           args: release --clean
           workdir: .
