--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,7 +13,44 @@ builds:
       - linux
       - windows
       - darwin
+    goarch:
+      - amd64
+      - arm64
     main: ./cmd/kai
+
+dockers:
+  - image_templates:
+      - "ghcr.io/basebandit/kai:{{ .Tag }}-amd64"
+    dockerfile: Dockerfile.goreleaser
+    use: buildx
+    build_flag_templates:
+      - "--platform=linux/amd64"
+      - "--label=org.opencontainers.image.title={{ .ProjectName }}"
+      - "--label=org.opencontainers.image.version={{ .Version }}"
+      - "--label=org.opencontainers.image.source={{ .GitURL }}"
+    goarch: amd64
+
+  - image_templates:
+      - "ghcr.io/basebandit/kai:{{ .Tag }}-arm64"
+    dockerfile: Dockerfile.goreleaser
+    use: buildx
+    build_flag_templates:
+      - "--platform=linux/arm64"
+      - "--label=org.opencontainers.image.title={{ .ProjectName }}"
+      - "--label=org.opencontainers.image.version={{ .Version }}"
+      - "--label=org.opencontainers.image.source={{ .GitURL }}"
+    goarch: arm64
+
+docker_manifests:
+  - name_template: "ghcr.io/basebandit/kai:{{ .Tag }}"
+    image_templates:
+      - "ghcr.io/basebandit/kai:{{ .Tag }}-amd64"
+      - "ghcr.io/basebandit/kai:{{ .Tag }}-arm64"
+
+  - name_template: "ghcr.io/basebandit/kai:latest"
+    image_templates:
+      - "ghcr.io/basebandit/kai:{{ .Tag }}-amd64"
+      - "ghcr.io/basebandit/kai:{{ .Tag }}-arm64"
 
 archives:
   - formats: tar.gz
